# wcbase

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt  readme.md
include/: readme.md
src/: CMakeLists.txt  wcbase.cpp  wcbase.hpp
src/lib/: CMakeLists.txt  bootstrap.hpp  json_helpers.hpp  socket_helpers.hpp
